# oai-pmh

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: demo.rs  error.rs  identify.rs  list_formats_and_sets.rs  list_identifiers.rs  list_records.rs
src/: error.rs  lib.rs
src/client/: metadata.rs  mod.rs  query.rs  response.rs  resumable.rs
tests/: request.rs
tests/fixtures/: err_bad_prefix.xml  err_not_found.xml  get_record.ead.xml  get_record.xml  identify.xml  list_identifiers.xml  list_metadata_formats.xml  list_records.xml  list_sets.xml
