[package]
name = "oai-pmh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
mockito = "1.7.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_qs = "0.15.0"
url = "2.5.7"
