[package]
name = "oai-pmh"
version = "0.3.0"
edition = "2024"
authors = ["Mark Cooper <gh.aftermath967@passinbox.com>"]
description = "Rust library for the Open Archives Initiative Protocol for Metadata Harvesting"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.21.3"
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = "1.12.2"
reqwest = "0.12.26"
serde = {version = "1.0.228", features = ["derive"]}
serde_qs = "0.15.0"
url = "2.5.7"

[dev-dependencies]
mockito = "1.7.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
